# pyramid-cookiecutter-starter

./: README.rst
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: README.txt  pyproject.toml
